--- a/MyerSplash/Strings/zh-CN/Resources.resw
+++ b/MyerSplash/Strings/zh-CN/Resources.resw
@@ -341,7 +341,7 @@
     <value>下载中</value>
   </data>
   <data name="SavedTitle" xml:space="preserve">
-    <value>完成了</value>
+    <value>下载完成</value>
   </data>
   <data name="PermissonError" xml:space="preserve">
     <value>没有权限写入文件，请检查图片文件夹下的 MyerSplash 目录的权限设置。</value>
