Support switching theme in settings

--- a/MyerSplash/Strings/zh-CN/Resources.resw
+++ b/MyerSplash/Strings/zh-CN/Resources.resw
@@ -448,4 +448,16 @@
   <data name="RestartHint" xml:space="preserve">
     <value>请重启以启用新语言</value>
   </data>
+  <data name="ThemeComboBoxDark" xml:space="preserve">
+    <value>深色</value>
+  </data>
+  <data name="ThemeComboBoxLight" xml:space="preserve">
+    <value>浅色</value>
+  </data>
+  <data name="ThemeComboBoxSystem" xml:space="preserve">
+    <value>跟随系统</value>
+  </data>
+  <data name="ThemeTitle.Text" xml:space="preserve">
+    <value>主题</value>
+  </data>
 </root>
