--- a/MyerSplash/Strings/en-US/Resources.resw
+++ b/MyerSplash/Strings/en-US/Resources.resw
@@ -426,4 +426,16 @@
   <data name="FeatureContent.Text" xml:space="preserve">
     <value>Support following system theme</value>
   </data>
+  <data name="LanguageTitle.Text" xml:space="preserve">
+    <value>Language</value>
+  </data>
+  <data name="LanguageComboBoxEnglish.Content" xml:space="preserve">
+    <value>English</value>
+  </data>
+  <data name="LanguageComboBoxChinese.Content" xml:space="preserve">
+    <value>简体中文</value>
+  </data>
+  <data name="RestartHint" xml:space="preserve">
+    <value>You need to restart app to apply the language setting.</value>
+  </data>
 </root>
