--- a/MyerSplash/Strings/en-US/Resources.resw
+++ b/MyerSplash/Strings/en-US/Resources.resw
@@ -438,13 +438,13 @@
   <data name="RestartHint" xml:space="preserve">
     <value>You need to restart app to apply the language setting.</value>
   </data>
-  <data name="ThemeComboBoxDark" xml:space="preserve">
+  <data name="ThemeComboBoxDark.Content" xml:space="preserve">
     <value>Dark</value>
   </data>
-  <data name="ThemeComboBoxLight" xml:space="preserve">
+  <data name="ThemeComboBoxLight.Content" xml:space="preserve">
     <value>Light</value>
   </data>
-  <data name="ThemeComboBoxSystem" xml:space="preserve">
+  <data name="ThemeComboBoxSystem.Content" xml:space="preserve">
     <value>System</value>
   </data>
   <data name="ThemeTitle.Text" xml:space="preserve">
