--- a/MyerSplash/Strings/en-US/Resources.resw
+++ b/MyerSplash/Strings/en-US/Resources.resw
@@ -339,7 +339,7 @@
   <data name="SavedTitle" xml:space="preserve">
     <value>Saved:D</value>
   </data>
-  <data name="PermissonError" xml:space="preserve">
+  <data name="PermissionError" xml:space="preserve">
     <value>No permission to create file for writing. Please check your security settings.
     If necessary, please contact me via about page.</value>
   </data>
